# rosary

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .rsry-bead-id  .rsry-handoff-0.json  .rsry-handoff-1.json  .rsry-handoff-2.json  .rsry-stream.jsonl  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  Taskfile.yml  apko.yaml  build.rs  codeql.yml  loom.toml  melange.yaml  rosary-self.toml  rosary.toml
.beads/: metadata.json
.cargo/: config.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
.semgrep/: rules.yml
_agent_logs/: 0004-production-review.md  0004-theoretical-review.md
agents/: architect-agent.md  dev-agent.md  feature-agent.md  janitor-agent.md  pm-agent.md  principal-agent.md  prod-agent.md  scoping-agent.md  skeptic-agent.md  staging-agent.md
agents/rules/: GOLDEN_RULES.md
agents/skills/: watch-pr.md
conductor/: .gitignore  ADR-002-otp-conductor.md  README.md  mix.exs
conductor/config/: config.exs  runtime.exs  test.exs
conductor/docs/: ARCHITECTURE.md  LIFECYCLE.md
conductor/lib/: conductor.ex
conductor/priv/: exec-null-stdin.sh
conductor/test/: acp_client_test.exs  agent_worker_test.exs  conductor_integration_test.exs  conductor_run_test.exs  conductor_test.exs  orchestrator_test.exs  pipeline_test.exs  provider_test.exs  rsry_client_test.exs  sprites_client_test.exs  sprites_exec_test.exs  test_helper.exs
crates/bdr/: ADR-001-harmony-lattice-decomposition.md  Cargo.toml
crates/bdr/src/: accrete.rs  atom.rs  channels.rs  decompose.rs  harmony.rs  lib.rs  parse.rs  thread.rs
crates/bdr/tests/: ADR-A-sheaf-cache.md  ADR-B-merkle-sheaf-sync.md  channels_test.rs  integration_test.rs  phase1_integration_test.rs
crates/crypto/: Cargo.toml  README.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  GETTING_STARTED.md  bead-triage-notes.md  competitive-landscape-orchestrators-2026.md  glossary.md  pm-sweep-2026-03-21.md  pre-commit-reference.yaml
docs/adr/: 0001-sprint-planning-protocol.md  0002-acp-integration.md  0004-dual-state-machine.md  0005-reactive-persistent-store.md  0006-declarative-tool-registry.md  0007-bdr-enrichment-pipeline.md  0008-agent-hierarchy-dispatch-model.md
docs/blog/: overnight-dispatch-2026-03-20.md
docs/design/: agent-provenance-standard.md  dispatch-manifest-schema.md  structured-handoff-pipeline.md  wasteland-integration.md
docs/research/: agent-provenance-lattice.md  agent-provenance-sbom-research.md
scripts/: check-bead-ref.sh  check-file-length.sh  check-versioned-files.sh  com.rosary.serve.plist.template  e2e-sandbox.sh  overnight-loop-prompt.md  statusline.sh
skills/evolve/: SKILL.md
skills/note/: SKILL.md
skills/seam-discovery/: SKILL.md
src/: acp.rs  backend.rs  bead.rs  bead_dolt.rs  bead_sqlite.rs  cli.rs  config.rs  dispatch.rs  dolt.rs  epic.rs  github.rs  handoff.rs  import.rs  linear.rs  linear_tracker.rs  main.rs  manifest.rs  migrate.rs  pipeline.rs  pool.rs  queue.rs  reconcile.rs  repo_cache.rs  scanner.rs  serve.rs  session.rs  sprites.rs  sprites_provider.rs  store.rs  store_dolt.rs  store_sqlite.rs  sync.rs  testutil.rs  thread.rs  vcs.rs  verify.rs  workspace.rs  xref.rs
src/dispatch/: mod.rs  pipeline.rs  prompt.rs  providers.rs  session.rs  tests.rs
src/dolt/: bead_crud.rs  deps.rs  migrate.rs  mod.rs  observations.rs  query.rs  tests.rs  util.rs
src/orchestrate/: fanout.rs  mailbox.rs  mod.rs  plan_gate.rs  synthesis.rs  transcript.rs
src/reconcile/: completion.rs  helpers.rs  lifecycle.rs  mod.rs  orchestration.rs  (+7 more)
tests/: cli_integration.rs
(+39 files in other folders)
