[package]
name = "loom"
version = "0.1.0"
edition = "2024"
description = "Weaves beads, repos, and review layers into coordinated work"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
toml = "1.0.6"
shellexpand = "3.1.2"
dirs-next = "2.0.0"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
