[package]
name = "rosary"
version = "0.1.0"
edition = "2024"
description = "Strings beads, repos, and review layers into coordinated work"

[[bin]]
name = "rsry"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "1.0.6"
shellexpand = "3.1.2"
dirs-next = "2.0.0"
sqlx-core = { version = "0.8.6", features = ["chrono"], default-features = false }
sqlx-mysql = { version = "0.8.6", features = ["chrono"], default-features = false }
reqwest = { version = "0.12", features = ["json"] }
leyline-vcs = { git = "https://github.com/agentic-research/ley-line", default-features = false }
agent-client-protocol = "0.10.2"
async-trait = "0.1.89"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
