[package]
name = "bdr"
version = "0.1.0"
edition = "2024"
description = "Bead Decision Records — Harmony lattice decomposition for ADRs"
license = "Apache-2.0"

[dependencies]
openai-harmony = "0.0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
